--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -29,11 +29,13 @@ p {font-size:1em;}
 
 body {background-color:#444; color:#f8f8f8;}
 
-.viewport {position:relative; width:640px; height:400px; margin:0 auto; border:4px solid #000;}
+.viewport {position: fixed; width:320px; height:200px; background-color:#222;
+  top: 50%; left: 50%; margin-top: -100px; margin-left: -160px;
+	-webkit-transform: scale(3); transform: scale(3);}
+
 .minimap {position:absolute; bottom:0; right:0; background-color:rgb(99,118,118);}
 
-#screen {position:relative; width:320px; height:200px; overflow:hidden;
-    border:1px solid black;}
+#screen {position:fixed; width:320px; height:200px; overflow:hidden;}
     
 div#floor,
 div#ceiling {position:absolute; width:100%; height:100%; background-color:rgb(99,118,118);}
