--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -29,13 +29,12 @@ p {font-size:1em;}
 
 body {background-color:#444; color:#f8f8f8;}
 
-.viewport {position: fixed; width:320px; height:200px; background-color:#222;
-  top: 50%; left: 50%; margin-top: -100px; margin-left: -160px;
-	-webkit-transform: scale(3); transform: scale(3);}
+.viewport {position: fixed; width:800px; height:600px; background-color:#222;
+  top: 50%; left: 50%; margin-top: -300px; margin-left: -400px;}
 
-.minimap {position:absolute; bottom:0; right:0; background-color:rgb(99,118,118);}
+.minimap {position:absolute; bottom:0; right:0; opacity:0.8;}
 
-#screen {position:fixed; width:320px; height:200px; overflow:hidden;}
+#screen {position:fixed; width:800px; height:600px; overflow:hidden;}
 
 .viewport,
 #screen,
