--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -27,14 +27,14 @@ p {font-size:1em;}
 
 /* theme_ */
 
-body {background-color:#444; color:#f8f8f8;}
+body {background-color:#222; color:#f8f8f8;}
 
-.viewport {position: fixed; width:800px; height:600px; background-color:#222;
-  top: 50%; left: 50%; margin-top: -300px; margin-left: -400px;}
+.viewport {position: fixed; width:1024px; height:600px; background-color:#222;
+  top: 50%; left: 50%; margin-top: -300px; margin-left: -512px;}
 
-.minimap {position:absolute; bottom:0; left:0; opacity:0.8;}
+.minimap {position:absolute; bottom:0; left:0; opacity:0.8; background-color:rgba(0,0,0,0.5)}
 
-#screen {position:fixed; width:800px; height:600px; overflow:hidden;}
+#screen {position:fixed; width:1024px; height:600px; overflow:hidden;}
 
 .viewport,
 #screen,
@@ -47,7 +47,7 @@ body {background-color:#444; color:#f8f8f8;}
 	-webkit-user-select: none;}
 
 div#floor,
-div#ceiling {position:absolute; width:100%; height:100%; background-color:rgb(99,118,118);}
+div#ceiling {position:absolute; width:100%; height:100%; background-color:#5B5B5B;}
 div#ceiling {height:50%; background-color:rgb(210,224,224);}
 
 footer {text-align:center;}
