--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -32,9 +32,19 @@ body {background-color:#222; color:#f8f8f8;}
 .viewport {position: fixed; width:1024px; height:600px; background-color:#222;
   top: 50%; left: 50%; margin-top: -300px; margin-left: -512px;}
 
+.viewport:after {
+	-webkit-box-shadow: inset 0px 0px 85px rgba(0,0,0,0.8);
+	-moz-box-shadow:    inset 0px 0px 85px rgba(0,0,0,0.8);
+	box-shadow:         inset 0px 0px 85px rgba(0,0,0,0.8);
+
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+	content: "";
+}
 .minimap {position:absolute; bottom:0; left:0; opacity:0.8; background-color:rgba(0,0,0,0.5)}
 
 #screen {position:fixed; width:1024px; height:600px; overflow:hidden;}
+#screen div {z-index:0;}
 
 .viewport,
 #screen,
@@ -47,7 +57,19 @@ body {background-color:#222; color:#f8f8f8;}
 	-webkit-user-select: none;}
 
 div#floor,
-div#ceiling {position:absolute; width:100%; height:100%; background-color:#5B5B5B;}
+div#ceiling {position:absolute; width:100%; height:100%;}
+div#floor {background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0, #5B5B5B),
+	color-stop(1, #0C0F14)
+);
+background-image: -o-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
+background-image: -moz-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
+background-image: -webkit-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
+background-image: -ms-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
+background-image: linear-gradient(to top, #5B5B5B 0%, #0C0F14 100%);}
 div#ceiling {height:50%; background-color:rgb(210,224,224);}
 
 footer {text-align:center;}
