--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -42,6 +42,8 @@ body {background-color:#222; color:#f8f8f8;}
 	content: "";
 }
 .minimap {position:absolute; bottom:0; left:0; opacity:0.8; background-color:rgba(0,0,0,0.5)}
+.currentItem {position:absolute; top:0; left:0; opacity:0.8;}
+.currentItem img { width: 100px; height: 100px; border: 2px solid yellow;}
 
 
 #screen {position:fixed; width:1024px; height:600px; overflow:hidden;}
