style for instructions for doors

--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -80,6 +80,12 @@ footer {text-align:center;}
 .item {
     border: 2px solid yellow;
 }
+#description{
+    position:   absolute;
+    z-index:    100000000000;
+    top:        600px;
+
+}
 
 
 
