--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -180,6 +180,213 @@ footer {text-align:center;}
     }
 }
 
+/* clouds */
+html,body {
+    margin:0;
+    height:100%
+}
+
+.ceil {
+    /*height:480px;*/
+    background:#007fd5;
+    position:relative;
+    overflow:hidden;
+    -webkit-animation:sky_background 3600s ease-out infinite;
+    -moz-animation:sky_background 3600s ease-out infinite;
+    -o-animation:sky_background 3600s ease-out infinite;
+    -webkit-transform:translate3d(0,0,0);
+    -moz-transform:translate3d(0,0,0);
+    -o-transform:translate3d(0,0,0)
+}
+
+
+.clouds_one {
+    background:url('../../media/images/clouds/cloud_one.png');
+    position:absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:300%;
+    -webkit-animation:cloud_one 150s linear infinite;
+    -moz-animation:cloud_one 150s linear infinite;
+    -o-animation:cloud_one 150s linear infinite;
+    -webkit-transform:translate3d(0,0,0);
+    -moz-transform:translate3d(0,0,0);
+    -o-transform:translate3d(0,0,0)
+}
+
+.clouds_two {
+    background:url('../../media/images/clouds/cloud_two.png');
+    position:absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:300%;
+    -webkit-animation:cloud_two 300s linear infinite;
+    -moz-animation:cloud_two 300s linear infinite;
+    -o-animation:cloud_two 300s linear infinite;
+    -webkit-transform:translate3d(0,0,0);
+    -moz-transform:translate3d(0,0,0);
+    -o-transform:translate3d(0,0,0)
+}
+
+.clouds_three {
+    background:url('../../media/images/clouds/cloud_three.png');
+    position:absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:300%;
+    -webkit-animation:cloud_three 600s linear infinite;
+    -moz-animation:cloud_three 600s linear infinite;
+    -o-animation:cloud_three 600s linear infinite;
+    -webkit-transform:translate3d(0,0,0);
+    -moz-transform:translate3d(0,0,0);
+    -o-transform:translate3d(0,0,0)
+}
+
+@-webkit-keyframes sky_background {
+    0% {
+        background:#007fd5;
+        color:#007fd5
+    }
+
+    50% {
+        background:#000;
+        color:#a3d9ff
+    }
+
+    100% {
+        background:#007fd5;
+        color:#007fd5
+    }
+}
+
+@-webkit-keyframes moon {
+    0% {
+        opacity: 0;
+        left:-200%
+        -moz-transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+    }
+
+50% {
+    opacity: 1;
+    -moz-transform: scale(1);
+    left:0%
+    bottom:250px;
+    -webkit-transform: scale(1);
+}
+
+100% {
+    opacity: 0;
+    bottom:500px;
+    -moz-transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+}
+    }
+
+@-webkit-keyframes cloud_one {
+    0% {
+        left:0
+    }
+
+    100% {
+        left:-200%
+    }
+}
+
+@-webkit-keyframes cloud_two {
+    0% {
+        left:0
+    }
+
+    100% {
+        left:-200%
+    }
+}
+
+@-webkit-keyframes cloud_three {
+    0% {
+        left:0
+    }
+
+    100% {
+        left:-200%
+    }
+}
+
+@-moz-keyframes sky_background {
+    0% {
+        background:#007fd5;
+        color:#007fd5
+    }
+
+    50% {
+        background:#000;
+        color:#a3d9ff
+    }
+
+    100% {
+        background:#007fd5;
+        color:#007fd5
+    }
+}
+
+@-moz-keyframes moon {
+    0% {
+        opacity: 0;
+        left:-200%
+        -moz-transform: scale(0.5);
+-webkit-transform: scale(0.5);
+    }
+
+50% {
+    opacity: 1;
+    -moz-transform: scale(1);
+    left:0%
+    bottom:250px;
+    -webkit-transform: scale(1);
+}
+
+100% {
+    opacity: 0;
+    bottom:500px;
+    -moz-transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+}
+    }
+
+@-moz-keyframes cloud_one {
+    0% {
+        left:0
+    }
+
+    100% {
+        left:-200%
+    }
+}
+
+@-moz-keyframes cloud_two {
+    0% {
+        left:0
+    }
+
+    100% {
+        left:-200%
+    }
+}
+
+@-moz-keyframes cloud_three {
+    0% {
+        left:0
+    }
+
+    100% {
+        left:-200%
+    }
+}
+
 
 
 
