--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -85,15 +85,15 @@ div#floor {background-image: -webkit-gradient(
 	linear,
 	left bottom,
 	left top,
-	color-stop(0, #5B5B5B),
-	color-stop(1, #0C0F14)
+	color-stop(0, #a3ce27),
+	color-stop(1, #44891a)
 );
 
-background-image: -o-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
-background-image: -moz-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
-background-image: -webkit-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
-background-image: -ms-linear-gradient(top, #5B5B5B 0%, #0C0F14 100%);
-background-image: linear-gradient(to top, #5B5B5B 0%, #0C0F14 100%);}
+background-image: -o-linear-gradient(top, #a3ce27 0%, #44891a 100%);
+background-image: -moz-linear-gradient(top, #a3ce27 0%, #44891a 100%);
+background-image: -webkit-linear-gradient(top, #a3ce27 0%, #44891a 100%);
+background-image: -ms-linear-gradient(top, #a3ce27 0%, #44891a 100%);
+background-image: linear-gradient(to top, #a3ce27 0%, #44891a 100%);}
 div#ceiling {
     height:50%;
     background-image: -webkit-gradient(
